--- a/Restaurant Menu/Restaurant Menu.html
+++ b/Restaurant Menu/Restaurant Menu.html
@@ -15,7 +15,7 @@
   <!-- ---------------------Header Section Start Here------------------------------>
 
   <header>
-    <a href="#" class="logo"><i class="fas fa-utensils"></i>James.</a>
+    <a href="#" class="logo"><i class="fas fa-utensils"></i>Winsome.</a>
 
     <nav class="navbar">
       <a class="active" href="Home">Home</a>
@@ -529,9 +529,9 @@
       <div class="swiper-slide slides">
         <i class="fas fa-quote-right"></i>
         <div class="user">
-          <img src="images/pic-2.jpg" alt="">
+          <img src="images/Winsome.png" alt="">
           <div class="user-info">
-            <h3>James Umoh</h3>
+            <h3>Winsome</h3>
             <div class="star">
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
@@ -544,7 +544,7 @@
 
         <p>The restaurant exudes a modern yet cozy atmosphere with dim lighting and chic decor.
            Soft jazz music played in the background, adding to the overall ambiance and
-           making it a perfect spot for a romantic dinner or a gathering with friends.  <span>James!</span></p>
+           making it a perfect spot for a romantic dinner or a gathering with friends.  <span>Winsome!</span></p>
       </div>
 
 
